Fixing issue on mobile with tv row

--- a/modules/widgets/tv/row/row.scss
+++ b/modules/widgets/tv/row/row.scss
@@ -40,6 +40,7 @@ $module: '.widget-tv.row';
       width: 80px;
       padding: 4px 0;
       //color: $colorBlue1;
+      vertical-align: middle;
 
       &:hover, &:active {
         //color: $colorGrey1;
